0.02
 - Fix REPOSITORY section in doc.

0.01 2015-01-14T19:05:15+01:00
 - First version