@@ -1,5 +1,6 @@
 0.02
  - Fix REPOSITORY section in doc.
+ - Update Module::Install to 1.16 version.
 
 0.01 2015-01-14T19:05:15+01:00
  - First version
